infra/k8/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: printit
  labels:
    role: frontend
    env: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec:
      containers:
      - name: frontend
        image: 683745388773.dkr.ecr.ap-south-1.amazonaws.com/printit-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: printit
spec:
  type: ClusterIP
  selector:
   role: frontend
  ports:
    - port: 80
      targetPort: 5173
